2010-01-12  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes_.m:  Allow patch markerfacecolor and 
	markeredgecolor properties to be used and set the marker colors
	appropriately.

2010-01-12  Jaroslav Hajek  <highegg@gmail.com>, Ben Barrowes  <benjamin.e.barrowes@usace.army.mil>

	* set/private/validargs.m: New function.
	* set/module.mk: Add it here.
	* set/ismember.m: Use it here.
	* set/intersect.m: Ditto.
	* set/union.m: Ditto.
	* set/setdiff.m: Ditto.
	* set/setxor.m: Ditto.

2010-01-11  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Update DOCSTRINGS rules to avoid simple_move_if_change_rule
	and allow Make to update timestamps.

2010-01-11  Jaroslav Hajek  <highegg@gmail.com>

	* plot/private/__scatter__.m: Use patch objects instead of lines,
	switch at 100 points.

2010-01-11  Jaroslav Hajek  <highegg@gmail.com>

	* plot/private/__scatter__.m: Fix typos.

2010-01-11  Jaroslav Hajek  <highegg@gmail.com>

	* io/fileread.m: New source.

2010-01-10  Jaroslav Hajek  <highegg@gmail.com>

	* plot/private/__scatter__.m: Use alternative strategy for larger
	point sets.

2010-01-06  Ben Abbott <bpabbott@mac.com>

	* /optimization/qp.m: Add missing semicolon.

2010-01-11  Ben Barrowes  <benjamin.e.barrowes@usace.army.mil>

	* set/: allow set scripts to handle cell inputs

2010-01-05  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/qp.m: Supply default values on request and register
	options.

2010-01-05  John W. Eaton  <jwe@octave.org>

	* qp.m: Allow linear term and constraint arguments to be
	optional.

2010-01-05  Joshua Redstone  <redstone@gmail.com>

	* qp.m: Handle optimset options struct argument.

2010-01-04  Jaroslav Hajek  <highegg@gmail.com>

	* strings/strmatch.m: Optimize.

2010-01-04  Jaroslav Hajek  <highegg@gmail.com>

	* strings/strrep.m: Remove.
	* strings/module.mk: Update.

2010-01-02  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: Support old style jacobian passing.

2010-01-01  Jaroslav Hajek  <highegg@gmail.com>
