@@ -1,3 +1,8 @@
+2010-01-13  John W. Eaton  <jwe@octave.org>
+
+	* miscellaneous/inputname.m: Return "" if argument name is not a
+	valid identifier.  Update docstring.
+
 2010-01-12  David Bateman  <dbateman@free.fr>
 
 	* plot/__go_draw_axes_.m:  Allow patch markerfacecolor and 
